--- a/demo1.html
+++ b/demo1.html
@@ -10,15 +10,16 @@
       //  var isDisplay=true;    // boolean
         // if....else -> to take decision 
         var age=13;
-        if(age>18){
+        if(age>200){
+          document.write("wrong data");
+        }
+        else if(age>18){
           document.write("can vote");
         }
         else if(age<18){
           document.write("can not vote");
         }
-        else if(age>200){
-          document.write("wrong data");
-        }
+        else 
         // loop -> to iterate the data
         var i=100;  // entry control loop
         while(i>=10){
