commit new files

--- a/arrayDemo.html
+++ b/arrayDemo.html
@@ -13,7 +13,8 @@
 // 4. shift() - remove element which is first in the list
             //            0      1      2       3       4       5
             var colors=["red","green","blue","black","white","pink"];
-
+            var nums=[1,2,3,4,5];
+            nums.push(6);
             colors.push("purple");
             colors.unshift("gray");
 
