--- a/objectDemo.html
+++ b/objectDemo.html
@@ -1,23 +1,57 @@
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    </head>
+    <body>
+        <div id="d1"></div>
+       
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
         <script>
-            var product={
+            var productList=
+            [
+                //0 index
+                {
                 code:1,
                 name:'Mobile',
                 price:34000,
                 desc:'Apple 10 phone',
-                details:function(){  // anonious function
-                    return "Product name is "+this.name+" and price is "+this.price;
-                },
-                details1:function(){
-                    return "Product name is "+this.name+" and desc "+this.desc;
-                }
-            }
-            document.write(JSON.stringify(product));
-
-            function add(){
-                
-            }
+               },
+               // 1st index
+               {
+                code:2,
+                name:'Laptop',
+                price:34000,
+                desc:'HP Laptop',
+               },
+               {
+                code:3,
+                name:'Laptop',
+                price:34000,
+                desc:'DELL Laptop',
+               },
+               {
+                code:4,
+                name:'Laptop',
+                price:34000,
+                desc:'LENOVO Laptop',
+               },
+        ]
+        var data="<table class='table table-bordered table-condensed table-hover'><tr><th>Product code</th><th>Name</th><th>Price</th><th>Description</th></tr>";
+            // for(var i=0;i<productList.length;i++){
+            //     data+="<tr><td>"+productList[i].code+"</td><td>"+productList[i].name+"</td><td>"+productList[i].price+"</td><td>"+productList[i].desc+"</td></tr>";
+            // }
+            // prod will define single object
+            productList.push({code:10,name:"Mouse",price:900,desc:"Microsoft mouse"})
+        productList.forEach(prod=>{
+            data+="<tr><td>"+prod.code+"</td><td>"+prod.name+"</td><td>"+prod.price+"</td><td>"+prod.desc+"</td></tr>"
+        })
+            data+="</table>" ;
+            document.getElementById("d1").innerHTML=data;    
         </script>
-    </head>
+
+    </body>
 </html>
