--- a/sampleDemo.html
+++ b/sampleDemo.html
@@ -31,7 +31,7 @@
             This is sample text in div tag 1
         </div>
         <div id="d2">
-            This is sample text in div tag 2
+            This is sample text in div tag 2 test
         </div>
     </body>
 </html>
